# fastapi-ml-template

./: .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  run.sh  tox.ini
app/: main.py
app/api/: api.py  heartbeat.py
app/core/: config.py  event_handler.py
app/models/: predict.py
app/services/: model.py
tests/: conftest.py  test_api.py
